@@ -47,6 +47,17 @@ logger email_logger{
 		title = "System info",
 		msg = "[%T %j] %L:%n%l%n"
 	}
+
+	% or use sendmail directly without a smtp server
+	% sendmail_appender sendmail{
+	% 	level=all,
+	% 	% location = "/usr/sbin/sendmail",
+	% 	% args = "-i -t",
+	% 	from = "admin@log4erl.org",
+	% 	to = "notification@log4erl.org",
+	% 	title = "System info",
+	% 	msg = "[%T %j] %L:%n%l%n"
+	% }
 }
 
 %% A logger with 1 syslog appender
